[project]
name = "Jestspectation"
version = "1.4.5"
description = "Pattern matching tools to test complex data structures"
authors = [{ name = "Maddy Guthridge", email = "hello@maddyguthridge.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["jest", "pattern", "matching", "pytest", "equality"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
homepage = "https://maddyguthridge.github.io/Jestspectation"
repository = "https://github.com/MaddyGuthridge/Jestspectation"
documentation = "https://maddyguthridge.github.io/Jestspectation"
"Bug Tracker" = "https://github.com/MaddyGuthridge/Jestspectation/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "coverage>=7.10.7",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.30.1",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jestspectation"
module-root = ""

[tool.pytest.ini_options]
addopts = '--doctest-glob="README.md" --doctest-glob="docs/**.md"'

[tool.mypy]
check_untyped_defs = true
files = ["jestspectation", "tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
    'return NotImplemented',
    '@overload',
    'raise AssertionError',
    'raise NotImplementedError',
]
