[metadata]
name = Jestspectation
version = 0.8.0
author = Miguel Guthridge
author_email = hdsq@outlook.com.au
description = Pattern matching helper classes designed to allow for testing of complex data structures in a readable and logical format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MiguelGuthridge/Jestspectation
project_urls =
    Online Documentation = https://github.com/MiguelGuthridge/Jestspectation
    Bug Tracker = https://github.com/MiguelGuthridge/Jestspectation/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Framework :: Pytest
keywords =
    jest
    pattern
    matching
    pytest
    equality

[options]
packages = find:
python_requires = >=3.9.1
include_package_data = True

[options.packages.find]
where = .
include =
    jestspectation
    jestspectation.*
exclude =
    tests

[project.entry_points]
pytest11 =
    jestspectation = jestspectation.pytest
